--- a/src/bcrypt_api/openapi/bcrypt_api.yaml
+++ b/src/bcrypt_api/openapi/bcrypt_api.yaml
@@ -1,4 +1,4 @@
-openapi: 3.1.0
+openapi: 3.0.0
 info:
   title: openapi
   version: '1.0'
@@ -17,7 +17,7 @@ paths:
   /generate-hash:
     post:
       summary: Create New User
-      operationId: post-generate-hash
+      operationId: api.bcrypt.generate_hash
       responses:
         '200':
           description: OK
@@ -56,7 +56,7 @@ paths:
   /check-password:
     post:
       summary: ''
-      operationId: post-check-password
+      operationId: apis.bcrypt.check_password
       responses:
         '200':
           description: OK
